--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
-                    "Authorization": "Bearer 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"
+                    "Authorization": "Bearer "
                 },
                 body: JSON.stringify({
                     model: "gpt-3.5-turbo",
